// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature: Modal Component Scenario Rendering Header Sub-Component When rendering the Header with a title & Icon Then the snapshot should match 1`] = `
<div
  className="cmp-modal-box "
  onClick={[Function]}
>
  <div
    className="cmp-modal"
  >
    <div
      className="cmp-modal__header header-with-title "
      data-locator="test-title"
    >
      <div
        className="cmp-modal__title"
      >
        <div
          className="cmp-modal__title-icon"
          data-locator="header-icon"
        >
          <div />
        </div>
        <div
          aria-label="TEST TITLE"
          className="cmp-modal__title-text"
          data-locator="test-title"
          role="heading"
        >
          TEST TITLE
        </div>
      </div>
      <button
        className="cmp-modal__close-icon"
        onClick={[MockFunction]}
      >
        <div
          aria-hidden="true"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Feature: Modal Component Scenario Rendering Header Sub-Component When rendering the Header with a title Then the snapshot should match 1`] = `
<div
  className="cmp-modal-box "
  onClick={[Function]}
>
  <div
    className="cmp-modal"
  >
    <div
      className="cmp-modal__header header-with-title "
      data-locator="test-title"
    >
      <div
        className="cmp-modal__title"
      >
        <div
          aria-label="TEST TITLE"
          className="cmp-modal__title-text"
          data-locator="test-title"
          role="heading"
        >
          TEST TITLE
        </div>
      </div>
      <button
        className="cmp-modal__close-icon"
        onClick={[MockFunction]}
      >
        <div
          aria-hidden="true"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Feature: Modal Component Scenario Rendering Modal When the modal is rendered in a closed state Then the snapshot should match 1`] = `null`;

exports[`Feature: Modal Component Scenario Rendering Modal When the modal is rendered in an open state Then the snapshot should match 1`] = `
<div
  className="cmp-modal-box "
  onClick={[Function]}
>
  <div
    className="cmp-modal"
  />
</div>
`;

exports[`Feature: Modal Component Scenario Rendering Modal When the modal is rendered w/child components & open state Then the snapshot should match 1`] = `
<div
  className="cmp-modal-box "
  onClick={[Function]}
>
  <div
    className="cmp-modal"
  >
    <div
      className="cmp-modal__header  "
      data-locator=""
    >
      <button
        className="cmp-modal__close-icon"
        onClick={[MockFunction]}
      >
        <div
          aria-hidden="true"
        />
      </button>
    </div>
  </div>
</div>
`;
